libs/cv/bindings/core.h

// Wrapper for std::vector<string>
typedef struct CStrings {
  const char **strs;
  int length;
} CStrings;
typedef struct ByteArray {
  char *data;
  int length;
} ByteArray;
// Wrapper for std::vector<int>
typedef struct IntVector {
  int *val;
  int length;
} IntVector;
// Wrapper for std::vector<float>
typedef struct FloatVector {
  float *val;
  int length;
} FloatVector;
typedef struct RawData {
  int width;
  int height;
  struct ByteArray data;
} RawData;
// Wrapper for an individual cv::Point2f
typedef struct Point2f {
  float x;
  float y;
} Point2f;
typedef struct Point3f {
  float x;
  float y;
  float z;
} Point3f;
// Wrapper for an individual cv::cvPoint
typedef struct Point {
  int x;
  int y;
} Point;
// Wrapper for the vector of Point structs aka std::vector<Point>
typedef struct Points {
  Point *points;
  int length;
} Points;
// Wrapper for the vector of Point2f structs aka std::vector<Point2f>
typedef struct Points2f {
  Point2f *points;
  int length;
} Points2f;
typedef struct Points3f {
  Point3f *points;
  int length;
} Points3f;
// Contour is alias for Points
typedef Points Contour;
// Contour2f is alias for Points2f
typedef Points2f Contour2f;
typedef struct Contours2f {
  Contour2f *contours;
  int length;
} Contours2f;
// Contour3f is alias for Points3f
typedef Points3f Contour3f;
// Wrapper for the vector of Points3f vectors aka std::vector<
// std::vector<Point3f> >
typedef struct Contours3f {
  Contour3f *contours;
  int length;
} Contours3f;
// Wrapper for the vector of Points vectors aka std::vector< std::vector<Point>
// >
typedef struct Contours {
  Contour *contours;
  int length;
} Contours;
// Wrapper for an individual cv::cvRect
typedef struct Rect {
  int x;
  int y;
  int width;
  int height;
} Rect;
// Wrapper for the vector of Rect struct aka std::vector<Rect>
typedef struct Rects {
  Rect *rects;
  int length;
} Rects;
// Wrapper for an individual cv::cvSize
typedef struct Size {
  int width;
  int height;
} Size;
// Wrapper for an individual cv::cvSize
typedef struct Size2f {
  float width;
  float height;
} Size2f;
// Wrapper for an individual cv::RotatedRect
typedef struct RotatedRect {
  Points pts;
  Rect boundingRect;
  Point center;
  Size size;
  double angle;
} RotatedRect;
// Wrapper for an individual cv::RotatedRect<float>
typedef struct RotatedRect2f {
  Points2f pts;
  Rect boundingRect;
  Point2f center;
  Size2f size;
  double angle;
} RotatedRect2f;
// Wrapper for an individual cv::cvScalar
typedef struct Scalar {
  double val1;
  double val2;
  double val3;
  double val4;
} Scalar;
// Wrapper for a individual cv::KeyPoint
typedef struct KeyPoint {
  double x;
  double y;
  double size;
  double angle;
  double response;
  int octave;
  int classID;
} KeyPoint;
// Wrapper for the vector of KeyPoint struct aka std::vector<KeyPoint>
typedef struct KeyPoints {
  KeyPoint *keypoints;
  int length;
} KeyPoints;
// Wrapper for SimpleBlobDetectorParams aka SimpleBlobDetector::Params
typedef struct SimpleBlobDetectorParams {
  unsigned char blobColor;
  bool filterByArea;
  bool filterByCircularity;
  bool filterByColor;
  bool filterByConvexity;
  bool filterByInertia;
  float maxArea;
  float maxCircularity;
  float maxConvexity;
  float maxInertiaRatio;
  float maxThreshold;
  float minArea;
  float minCircularity;
  float minConvexity;
  float minDistBetweenBlobs;
  float minInertiaRatio;
  size_t minRepeatability;
  float minThreshold;
  float thresholdStep;
} SimpleBlobDetectorParams;
// Wrapper for an individual cv::DMatch
typedef struct DMatch {
  int queryIdx;
  int trainIdx;
  int imgIdx;
  float distance;
} DMatch;
// Wrapper for the vector of DMatch struct aka std::vector<DMatch>
typedef struct DMatches {
  DMatch *dmatches;
  int length;
} DMatches;
// Wrapper for the vector vector of DMatch struct aka
// std::vector<std::vector<DMatch>>
typedef struct MultiDMatches {
  DMatches *dmatches;
  int length;
} MultiDMatches;
// Wrapper for an individual cv::Moment
typedef struct Moment {
  double m00;
  double m10;
  double m01;
  double m20;
  double m11;
  double m02;
  double m30;
  double m21;
  double m12;
  double m03;

  double mu20;
  double mu11;
  double mu02;
  double mu30;
  double mu21;
  double mu12;
  double mu03;

  double nu20;
  double nu11;
  double nu02;
  double nu30;
  double nu21;
  double nu12;
  double nu03;
} Moment;
typedef cv::Mat *Mat;
typedef cv::TermCriteria *TermCriteria;
typedef cv::RNG *RNG;
typedef std::vector<cv::Point> *PointVector;
typedef std::vector<std::vector<cv::Point>> *PointsVector;
typedef std::vector<cv::Point2f> *Point2fVector;
typedef std::vector<std::vector<cv::Point2f>> *Points2fVector;
typedef std::vector<cv::Point3f> *Point3fVector;
typedef std::vector<std::vector<cv::Point3f>> *Points3fVector;
typedef void *Mat;
typedef void *TermCriteria;
typedef void *RNG;
typedef void *PointVector;
typedef void *PointsVector;
typedef void *Point2fVector;
typedef void *Points2fVector;
typedef void *Point3fVector;
typedef void *Points3fVector;
// Wrapper for the vector of Mat aka std::vector<Mat>
typedef struct Mats {
  Mat *mats;
  int length;
} Mats;
Mat Mat_New();
Mat Mat_NewWithSize(int rows, int cols, int type);
Mat Mat_NewWithSizes(struct IntVector sizes, int type);
Mat Mat_NewWithSizesFromScalar(IntVector sizes, int type, Scalar ar);
Mat Mat_NewWithSizesFromBytes(IntVector sizes, int type, struct ByteArray buf);
Mat Mat_NewFromScalar(const Scalar ar, int type);
Mat Mat_NewWithSizeFromScalar(const Scalar ar, int rows, int cols, int type);
Mat Mat_NewFromBytes(int rows, int cols, int type, struct ByteArray buf);
Mat Mat_FromPtr(Mat m, int rows, int cols, int type, int prows, int pcols);
void Mat_Close(Mat m);
int Mat_Empty(Mat m);
bool Mat_IsContinuous(Mat m);
void Mat_Inv(Mat m);
Mat Mat_Col(Mat m, int c);
Mat Mat_Row(Mat m, int r);
Mat Mat_Clone(Mat m);
void Mat_CopyTo(Mat m, Mat dst);
int Mat_Total(Mat m);
void Mat_Size(Mat m, IntVector *res);
void Mat_CopyToWithMask(Mat m, Mat dst, Mat mask);
void Mat_ConvertTo(Mat m, Mat dst, int type);
void Mat_ConvertToWithParams(Mat m, Mat dst, int type, float alpha, float beta);
struct ByteArray Mat_ToBytes(Mat m);
struct ByteArray Mat_DataPtr(Mat m);
Mat Mat_Region(Mat m, Rect r);
Mat Mat_Reshape(Mat m, int cn, int rows);
void Mat_PatchNaNs(Mat m);
Mat Mat_ConvertFp16(Mat m);
Scalar Mat_Mean(Mat m);
Scalar Mat_MeanWithMask(Mat m, Mat mask);
Mat Mat_Sqrt(Mat m);
int Mat_Rows(Mat m);
int Mat_Cols(Mat m);
int Mat_Channels(Mat m);
int Mat_Type(Mat m);
int Mat_Step(Mat m);
int Mat_ElemSize(Mat m);
Mat Eye(int rows, int cols, int type);
Mat Zeros(int rows, int cols, int type);
Mat Ones(int rows, int cols, int type);
uint8_t Mat_GetUChar(Mat m, int row, int col);
uint8_t Mat_GetUChar3(Mat m, int x, int y, int z);
int8_t Mat_GetSChar(Mat m, int row, int col);
int8_t Mat_GetSChar3(Mat m, int x, int y, int z);
int16_t Mat_GetShort(Mat m, int row, int col);
int16_t Mat_GetShort3(Mat m, int x, int y, int z);
int32_t Mat_GetInt(Mat m, int row, int col);
int32_t Mat_GetInt3(Mat m, int x, int y, int z);
float Mat_GetFloat(Mat m, int row, int col);
float Mat_GetFloat3(Mat m, int x, int y, int z);
double Mat_GetDouble(Mat m, int row, int col);
double Mat_GetDouble3(Mat m, int x, int y, int z);
void Mat_SetTo(Mat m, Scalar value);
void Mat_SetUChar(Mat m, int row, int col, uint8_t val);
void Mat_SetUChar3(Mat m, int x, int y, int z, uint8_t val);
void LUT(Mat src, Mat lut, Mat dst);