libs/cv/core.odin

package cv

import "core:c"

when ODIN_OS == .Darwin do foreign import cv "libcv.a"

// Wrapper for std::vector<string>
CStrings :: struct {
	strs:   [^]cstring,
	length: c.int,
}

// Wrapper for std::vector<char>
ByteArray :: struct {
	data:   [^]byte,
	length: c.int,
}

// Wrapper for std::vector<int>
IntVector :: struct {
	val:    [^]c.int,
	length: c.int,
}

// Wrapper for std::vector<float>
FloatVector :: struct {
	val:    [^]c.float,
	length: c.int,
}

RawData :: struct {
	width:  c.int,
	height: c.int,
	data:   ByteArray,
}

// Wrapper for an individual cv::Point2f
Point2f :: struct {
	x: c.float,
	y: c.float,
}

Point3f :: struct {
	x: c.float,
	y: c.float,
	z: c.float,
}

// Wrapper for an individual cv::cvPoint
Point :: struct {
	x: c.int,
	y: c.int,
}

// Wrapper for the vector of Point structs aka std::vector<Point>
Points :: struct {
	points: [^]Point,
	length: c.int,
}

// Wrapper for the vector of Point2f structs aka std::vector<Point2f>
Points2f :: struct {
	points: [^]Point2f,
	length: c.int,
}

Points3f :: struct {
	points: [^]Point3f,
	length: c.int,
}

// Contour is alias for Points
Contour :: Points

// Contour2f is alias for Points2f
Contour2f :: Points2f

Contours2f :: struct {
	points: [^]Contour2f,
	length: c.int,
}

// Contour3f is alias for Points3f
Contour3f :: Points3f

// Wrapper for the vector of Points3f vectors aka std::vector<
// std::vector<Point3f> >
Contours3f :: struct {
	points: [^]Contours3f,
	length: c.int,
}

// Wrapper for the vector of Points vectors aka std::vector< std::vector<Point>
// >
Contours :: struct {
	points: [^]Contours,
	length: c.int,
}

// Wrapper for an individual cv::cvRect
Rect :: struct {
	x:      c.int,
	y:      c.int,
	width:  c.int,
	height: c.int,
}

// Wrapper for the vector of Rect struct aka std::vector<Rect>
Rects :: struct {
	points: [^]Rect,
	length: c.int,
}

// Wrapper for an individual cv::cvSize
Size :: struct {
	width:  c.int,
	height: c.int,
}

// Wrapper for an individual cv::cvSize
Size2f :: struct {
	width:  c.float,
	height: c.float,
}

// Wrapper for an individual cv::RotatedRect
RotatedRect :: struct {
	pts:          Points,
	boundingRect: Rect,
	center:       Point,
	size:         Size,
	angle:        c.double,
}

// Wrapper for an individual cv::RotatedRect
RotatedRect2f :: struct {
	pts:          Points2f,
	boundingRect: Rect,
	center:       Point2f,
	size:         Size2f,
	angle:        c.double,
}

// Wrapper for an individual cv::cvScalar
Scalar :: struct {
	val1: c.double,
	val2: c.double,
	val3: c.double,
	val4: c.double,
}

// Wrapper for a individual cv::KeyPoint
KeyPoint :: struct {
	x:        c.double,
	y:        c.double,
	size:     c.double,
	angle:    c.double,
	response: c.double,
	octave:   c.int,
	classID:  c.int,
}

// Wrapper for the vector of KeyPoint struct aka std::vector<KeyPoint>
KeyPoints :: struct {
	keypoints: [^]KeyPoint,
	length:    c.int,
}

// Wrapper for SimpleBlobDetectorParams aka SimpleBlobDetector::Params
SimpleBlobDetectorParams :: struct {
	blobColor:           c.uchar,
	filterByArea:        c.bool,
	filterByCircularity: c.bool,
	filterByColor:       c.bool,
	filterByConvexity:   c.bool,
	filterByInertia:     c.bool,
	maxArea:             c.float,
	maxCircularity:      c.float,
	maxConvexity:        c.float,
	maxInertiaRatio:     c.float,
	maxThreshold:        c.float,
	minArea:             c.float,
	minCircularity:      c.float,
	minConvexity:        c.float,
	minDistBetweenBlobs: c.float,
	minInertiaRatio:     c.float,
	minRepeatability:    c.size_t,
	minThreshold:        c.float,
	thresholdStep:       c.float,
}

// Wrapper for an individual cv::DMatch
DMatch :: struct {
	queryIdx: c.int,
	trainIdx: c.int,
	imgIdx:   c.int,
	distance: c.float,
}

// Wrapper for the vector of DMatch struct aka std::vector<DMatch>
DMatches :: struct {
	dmatches: [^]DMatch,
	length:   c.int,
}

// Wrapper for the vector vector of DMatch struct aka
// std::vector<std::vector<DMatch>>
MultiDMatches :: struct {
	dmatches: [^]DMatches,
	length:   c.int,
}

// Wrapper for an individual cv::Moment
Moment :: struct {
	m00:  c.double,
	m10:  c.double,
	m01:  c.double,
	m20:  c.double,
	m11:  c.double,
	m02:  c.double,
	m30:  c.double,
	m21:  c.double,
	m12:  c.double,
	m03:  c.double,
	mu20: c.double,
	mu11: c.double,
	mu02: c.double,
	mu30: c.double,
	mu21: c.double,
	mu12: c.double,
	mu03: c.double,
	nu20: c.double,
	nu11: c.double,
	nu02: c.double,
	nu30: c.double,
	nu21: c.double,
	nu12: c.double,
	nu03: c.double,
}

Mat :: distinct rawptr
TermCriteria :: distinct rawptr
RNG :: distinct rawptr
PointVector :: distinct rawptr
PointsVector :: distinct rawptr
Point2fVector :: distinct rawptr
Points2fVector :: distinct rawptr
Point3fVector :: distinct rawptr
Points3fVector :: distinct rawptr

Mats :: struct {
	mats:   [^]Mat,
	length: c.int,
}

Mat_Type :: enum {
	CV_8U,
	CV_8S,
	CV_16U,
	CV_16S,
	CV_32S,
	CV_32F,
	CV_64F,
}

@(default_calling_convention = "c")
foreign cv {
	// Mat_New creates a new empty Mat
	@(link_name = "Mat_New")
	mat_new :: proc() -> Mat ---

	// Mat_NewWithSize creates a new Mat with a specific size dimension and number
	// of channels.
	@(link_name = "Mat_NewWithSize")
	mat_new_with_size :: proc(rows, cols: c.int, type: Mat_Type) -> Mat ---

	// Mat_NewWithSizes creates a new Mat with specific dimension sizes and number
	// of channels.
	@(link_name = "Mat_NewWithSizes")
	mat_new_with_sizes :: proc(sizes: []c.int, type: Mat_Type) -> Mat ---

	// Mat_NewFromScalar creates a new Mat from a Scalar. Intended to be used
	// for Mat comparison operation such as InRange.
	@(link_name = "Mat_NewFromScalar")
	mat_new_from_scalar :: proc(ar: Scalar, type: Mat_Type) -> Mat ---

	// Mat_NewWithSizeFromScalar creates a new Mat from a Scalar with a specific
	// size dimension and number of channels
	@(link_name = "Mat_NewWithSizeFromScalar")
	mat_new_with_size_from_scalar :: proc(ar: Scalar, rows, cols: c.int, type: Mat_Type) -> Mat ---

	@(link_name = "Mat_NewFromBytes")
	mat_new_from_bytes :: proc(rows, cols: c.int, type: Mat_Type, buf: ByteArray) -> Mat ---

	// Mat_NewWithSizesFromScalar creates multidimensional Mat from a scalar
	@(link_name = "Mat_NewWithSizesFromScalar")
	mat_new_with_sizes_from_scalar :: proc(sizes: IntVector, type: Mat_Type, ar: Scalar) -> Mat ---

	// Mat_NewWithSizesFromBytes creates multidimensional Mat from a bytes
	@(link_name = "Mat_NewWithSizesFromBytes")
	mat_new_with_sizes_from_bytes :: proc(sizes: IntVector, type: Mat_Type, buf: ByteArray) -> Mat ---

	@(link_name = "Eye")
	eye :: proc(rows, cols: c.int, type: Mat_Type) -> Mat ---

	@(link_name = "Zeros")
	zeros :: proc(rows, cols: c.int, type: Mat_Type) -> Mat ---

	@(link_name = "Ones")
	ones :: proc(rows, cols: c.int, type: Mat_Type) -> Mat ---

	@(link_name = "Mat_FromPtr")
	mat_from_ptr :: proc(m: Mat, rows, cols: c.int, type: Mat_Type, prow, pcol: c.int) -> Mat ---

	// Mat_Close deletes an existing Mat
	@(link_name = "Mat_Close")
	mat_close :: proc(m: Mat) ---

	// Mat_IsContinuous tests if a Mat is continuous
	@(link_name = "Mat_IsContinuous")
	mat_is_continuous :: proc(m: Mat) -> c.bool ---

	// Mat_Empty tests if a Mat is empty
	@(link_name = "Mat_Empty")
	mat_empty :: proc(m: Mat) -> c.int ---

	@(link_name = "Mat_Inv")
	mat_inv :: proc(m: Mat) ---

	@(link_name = "Mat_Col")
	mat_col :: proc(m: Mat) -> Mat ---

	@(link_name = "Mat_Row")
	mat_row :: proc(m: Mat) -> Mat ---

	// Mat_Clone returns a clone of this Mat
	@(link_name = "Mat_Clone")
	mat_clone :: proc(m: Mat) -> Mat ---

	// Mat_CopyTo copies this Mat to another Mat.
	@(link_name = "Mat_CopyTo")
	mat_copy_to :: proc(m, dst: Mat) ---

	// Mat_CopyToWithMask copies this Mat to another Mat while applying the mask
	@(link_name = "Mat_CopyToWithMask")
	mat_copy_to_with_mask :: proc(m, dst, mask: Mat) ---

	@(link_name = "Mat_ConvertTo")
	mat_convert_to :: proc(m, dst: Mat, type: Mat_Type) ---

	@(link_name = "Mat_ConvertToWithParams")
	mat_convert_to_with_params :: proc(m, dst: Mat, type: Mat_Type, alpha, beta: c.float) ---

	// Mat_ToBytes returns the bytes representation of the underlying data.
	Mat_ToBytes :: proc(m: Mat) -> ByteArray ---

	Mat_DataPtr :: proc(m: Mat) -> ByteArray ---

	// Mat_Region returns a Mat of a region of another Mat
	@(link_name = "Mat_Region")
	mat_region :: proc(m: Mat, r: Rect) -> Mat ---

	@(link_name = "Mat_Reshape")
	mat_reshape :: proc(m: Mat, cn, rows: c.int) -> Mat ---

	@(link_name = "Mat_PatchNaNs")
	patch_NaNs :: proc(m: Mat) ---

	@(link_name = "Mat_ConvertFp16")
	convert_fp16 :: proc(m: Mat) -> Mat ---

	@(link_name = "Mat_Sqrt")
	sqrt :: proc(m: Mat) -> Mat ---

	@(link_name = "Mat_Mean")
	mean :: proc(m: Mat) -> Scalar ---

	@(link_name = "Mat_MeanWithMask")
	mean_with_mask :: proc(m, mask: Mat) -> Scalar ---

	@(link_name = "LUT")
	lut :: proc(src, lut, dst: Mat) -> Mat ---

	// Mat_Rows returns how many rows in this Mat.
	@(link_name = "Mat_Rows")
	mat_rows :: proc(m: Mat) -> c.int ---

	// Mat_Cols returns how many columns in this Mat.
	@(link_name = "Mat_Cols")
	mat_cols :: proc(m: Mat) -> c.int ---

	// Mat_Channels returns how many channels in this Mat.
	@(link_name = "Mat_Channels")
	mat_channels :: proc(m: Mat) -> c.int ---

	// Mat_Type returns how many channels in this Mat.
	@(link_name = "Mat_Type")
	mat_type :: proc(m: Mat) -> Mat_Type ---

	// Mat_Step returns the number of bytes each matrix row occupies.
	@(link_name = "Mat_Step")
	mat_step :: proc(m: Mat) -> c.int ---

	@(link_name = "Mat_Total")
	mat_total :: proc(m: Mat) -> c.int ---

	@(link_name = "Mat_ElemSize")
	mat_elem_size :: proc(m: Mat) -> c.int ---

	Mat_Size :: proc(m: Mat, res: ^IntVector) ---

	// Mat_GetUChar returns a specific row/col value from this Mat expecting
	// each element to contain a schar aka CV_8U.
	@(link_name = "Mat_GetUChar")
	mat_get_uchar :: proc(m: Mat, row, col: c.int) -> c.uint8_t ---

	@(link_name = "Mat_GetUChar3")
	mat_get_uchar3 :: proc(m: Mat, x, y, z: c.int) -> c.uint8_t ---

	// Mat_GetSChar returns a specific row/col value from this Mat expecting
	// each element to contain a schar aka CV_8S.
	@(link_name = "Mat_GetSChar")
	mat_get_schar :: proc(m: Mat, row, col: c.int) -> c.int8_t ---

	@(link_name = "Mat_GetSChar3")
	mat_get_schar3 :: proc(m: Mat, x, y, z: c.int) -> c.int8_t ---

	// Mat_GetShort returns a specific row/col value from this Mat expecting
	// each element to contain a short aka CV_16S.
	@(link_name = "Mat_GetShort")
	mat_get_short :: proc(m: Mat, row, col: c.int) -> c.int16_t ---

	@(link_name = "Mat_GetShort3")
	mat_get_short3 :: proc(m: Mat, x, y, z: c.int) -> c.int16_t ---

	// Mat_GetInt returns a specific row/col value from this Mat expecting
	// each element to contain an int aka CV_32S.
	@(link_name = "Mat_GetInt")
	mat_get_int :: proc(m: Mat, row, col: c.int) -> c.int32_t ---

	@(link_name = "Mat_GetInt3")
	mat_get_int3 :: proc(m: Mat, x, y, z: c.int) -> c.int32_t ---

	// Mat_GetFloat returns a specific row/col value from this Mat expecting
	// each element to contain a float aka CV_32F.
	@(link_name = "Mat_GetFloat")
	mat_get_float :: proc(m: Mat, row, col: c.int) -> c.float ---

	@(link_name = "Mat_GetFloat3")
	mat_get_float3 :: proc(m: Mat, x, y, z: c.int) -> c.float ---

	// Mat_GetDouble returns a specific row/col value from this Mat expecting
	// each element to contain a double aka CV_64F.
	@(link_name = "Mat_GetDouble")
	mat_get_double :: proc(m: Mat, row, col: c.int) -> c.double ---

	@(link_name = "Mat_GetDouble3")
	mat_get_double3 :: proc(m: Mat, x, y, z: c.int) -> c.double ---

	@(link_name = "Mat_SetTo")
	mat_set_to :: proc(m: Mat, value: Scalar) -> c.double ---

	// Mat_GetUChar returns a specific row/col value from this Mat expecting
	// each element to contain a schar aka CV_8U.
	@(link_name = "Mat_SetUChar")
	mat_set_uchar :: proc(m: Mat, row, col: c.int) -> c.uint8_t ---

	@(link_name = "Mat_SetUChar3")
	mat_set_uchar3 :: proc(m: Mat, x, y, z: c.int) -> c.uint8_t ---
